# executors

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  async_execute.h  executor_traits.h  executors_export.h  executors_global.h  for_each.h  future.cpp  future.h  loop_executor.cpp  loop_executor.h  standard_executor_traits.h  then_execute.h  thread_executor.cpp  thread_executor.h  thread_pool_executor.cpp  thread_pool_executor.h  thread_pool_executor_p.h  when_all.h
test/: CMakeLists.txt  all.cpp  executors_test_all.cpp  functor_test.cpp
util/: adapters.h  any.h  apply.h  for_each.h  for_each_t.h  for_each_t.h.b11316  for_each_t.h.nk2480  for_each_t.h.wp7464  for_index.h  function_traits.h  functor.h  result_of_friendly.h  template_type.h  tuple_v.h
