add_executable(executors_test_all executors_test_all.cpp)
add_dependencies(executors_test_all executors)
target_link_libraries(executors_test_all executors)
add_test(executors.test.all executors_test_all)
set_property(TARGET executors_test_all PROPERTY CXX_STANDARD 14)

add_executable(functor_test functor_test.cpp)
add_dependencies(functor_test executors)
target_link_libraries(functor_test executors)
add_test(functor.test functor_test)
set_property(TARGET functor_test PROPERTY CXX_STANDARD 14)
